--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -7,3 +7,26 @@
 .page .page-title {
    display: none;
 }
+
+// 默认样式
+.try-button {
+    position: absolute;
+    bottom: 1em;
+    right: 1em;
+    font-weight: 100;
+    border: 1px solid #719af4;
+    border-radius: 4px;
+    color: #719af4;
+    padding: 2px 8px;
+    text-decoration: none;
+    transition-timing-function: ease;
+    transition: opacity .3s;
+    opacity: 0;
+}
+
+// hover 样式
+.content__default:not(.custom) a.try-button:hover {
+    background-color: #719af4;
+    color: #fff;
+    text-decoration: none;
+}
